--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,15 @@ import Card from "../components/Card.astro";
 ---
 
 <Layout title="Aggionare Digital">
-	<header class="m-10">
-		<div class="navbar rounded-md px-5">
+	<header class="p-10">
+		<div class="navbar rounded-md shadow px-5 backdrop-blur">
 			<div class="navbar-start">
 				<div class="dropdown">
-					<div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+					<div
+						tabindex="0"
+						role="button"
+						class="btn btn-ghost lg:hidden"
+					>
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							class="h-5 w-5"
@@ -26,9 +30,9 @@ import Card from "../components/Card.astro";
 						tabindex="0"
 						class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
 					>
-						<li><a>Item 1</a></li>
-						<li><a>Item 2</a></li>
-						<li><a>Item 3</a></li>
+						<li><a>Home</a></li>
+						<li><a>Servicios</a></li>
+						<li><a>Sobre nosotros</a></li>
 					</ul>
 				</div>
 				<a class="btn btn-ghost text-xl">Aggiornare Digital</a>
@@ -46,17 +50,60 @@ import Card from "../components/Card.astro";
 		</div>
 	</header>
 	<main class="w-full">
-		<section class="flex flex-col justify-center mx-20 my-5 p-20 h-screen">
+		<section
+			class="flex flex-col flex-nowrap gap-10 text-center mx-20 p-20 h-screen"
+		>
 			<h1>
 				<span class="text-5xl">
-					Conseguí la pagina que querés rapido, 
-					seguro, y barato!
+					Conseguí la pagina que querés rapido, seguro, y barato!
 				</span>
 			</h1>
-			<svg class="bannerEl" width="80" height="22" viewBox="0 0 80 22" fill="none" style="--order: 2;"><line x1="1" y1="1" x2="79" y2="1" stroke="#484A51" stroke-width="2" stroke-linecap="round"></line><line x1="17" y1="11" x2="63" y2="11" stroke="#484A51" stroke-width="2" stroke-linecap="round"></line><line x1="29" y1="21" x2="51" y2="21" stroke="#484A51" stroke-width="2" stroke-linecap="round"></line></svg>
-			<span>
-				We help businesses create fast, performance-focused, scalable & secure website using the latest and revolutionary technologies.
+			<div class="w-full flex justify-center">
+				<svg
+					class="bannerEl"
+					width="80"
+					height="22"
+					viewBox="0 0 80 22"
+					fill="none"
+					style="--order: 2;"
+					><line
+						x1="1"
+						y1="1"
+						x2="79"
+						y2="1"
+						stroke="#484A51"
+						stroke-width="2"
+						stroke-linecap="round"></line><line
+						x1="17"
+						y1="11"
+						x2="63"
+						y2="11"
+						stroke="#484A51"
+						stroke-width="2"
+						stroke-linecap="round"></line><line
+						x1="29"
+						y1="21"
+						x2="51"
+						y2="21"
+						stroke="#484A51"
+						stroke-width="2"
+						stroke-linecap="round"></line></svg
+				>
+			</div>
+
+			<span class="text-2xl">
+				Ayudamos a las empresas a crear sitios web rápidos, centrados en el rendimiento, escalables y seguros utilizando las últimas y revolucionarias tecnologías.
 			</span>
+			<div class="w-full">
+				<a href="" class="btn btn-outline btn-accent">Contactanos</a>
+				<a href="" class="btn btn-outline">Mirá nuestros servicios</a>
+			</div>
+		</section>
+		<section
+			class="flex flex-col flex-nowrap gap-10 text-center mx-20 p-20 h-screen"
+		>
+		<h2 class="text-2xl font-bold">Nuestros Servicios</h2>
 		</section>
 	</main>
 </Layout>
+
