footer background fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -518,5 +518,6 @@ import Layout from "../layouts/Layout.astro";
 	.blob {
 		background-image: url('data:image/svg+xml,<svg width="1440" height="997" viewBox="0 0 1440 997" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_32_987)"><path d="M2294.77 1326.25C1803.5 47 257.711 -11.0779 -50.571 14.0435L-1008 1809.4L1286.47 3033C1535.67 2572.08 2086.2 1732.65 2294.77 1326.25Z" fill="%236d41be"/></g><defs><clipPath id="clip0_32_987"><rect width="1440" height="997" fill="white"/></clipPath></defs></svg>');
 		background-repeat: no-repeat;
+		background-size: cover;
 	}
 </style>
