--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ import Layout from "../layouts/Layout.astro";
 			</div>
 		</section>
 		<section
-			class="flex flex-col items-center flex-nowrap gap-10 text-center mx-10 p-10 md:h-screen"
+			class="flex flex-col items-center flex-nowrap gap-10 text-center mx-10 p-10"
 		>
 			<h2 class="text-2xl font-bold" id="servicios">
 				Nuestros Servicios
