--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Aggiornare Digital">
+<Layout
+	title="Estudio Ceibo"
+	description="Somos una agencia de desarrollo de software"
+	url="https://estudioceibo.com.ar"
+>
 	<header class="p-10">
 		<div class="navbar rounded-md shadow-xl border px-5 bg-white">
 			<div class="navbar-start">
@@ -34,7 +38,7 @@ import Layout from "../layouts/Layout.astro";
 						<li><a>Sobre nosotros</a></li>
 					</ul>
 				</div>
-				<a class="btn btn-ghost text-xl">Aggiornare Digital</a>
+				<a class="btn btn-ghost text-xl font-bold">ceibo</a>
 			</div>
 			<div class="navbar-center hidden lg:flex">
 				<ul class="menu menu-horizontal px-1">
@@ -49,10 +53,10 @@ import Layout from "../layouts/Layout.astro";
 		</div>
 	</header>
 	<main class="w-full">
-		<section class="flex flex-nowrap gap-10 mx-5 md:mx-20 md:p-20 h-screen">
+		<section class="flex flex-nowrap gap-10 mx-5 lg:mx-20 lg:p-20 h-screen">
 			<div class="md:w-1/2">
 				<h1>
-					<span class="text-xl md:text-4xl font-bold text-white">
+					<span class="text-xl lg:text-4xl font-bold text-white">
 						Somos una agencia de desarrollo de software
 					</span>
 				</h1>
@@ -63,9 +67,9 @@ import Layout from "../layouts/Layout.astro";
 				</p>
 				<a href="#contacto" class="btn">Contactanos</a>
 			</div>
-			<div class="hidden w-1/2 h-1/2 md:flex justify-center items-center">
+			<div class="hidden w-1/2 h-1/2 lg:flex justify-center items-center">
 				<img
-					src="/aggiornare-soluciones/images/backgrounds/development_02.svg"
+					src="/images/backgrounds/development_02.svg"
 					alt=""
 					width="360"
 				/>
@@ -431,9 +435,7 @@ import Layout from "../layouts/Layout.astro";
 		</section>
 		<footer class="flex align-center bg-[#6d41be] px-20 py-5 text-white">
 			<div class="grow">
-				<a href="#" class="btn btn-ghost"
-					>Aggiornare Digital. Hecho con amor ❤</a
-				>
+				<a href="#" class="btn btn-ghost">ceibo. Hecho con amor ❤</a>
 			</div>
 
 			<div>
